# zcp

./: CMakeLists.txt  README.md  build.sh
data/: bensh2.txt
licences/: zcp.txt
src/: main.cpp  mempool.hh  zfile.cc  zfile.hh  zfilelz4.cc  zfilelz4.hh
src/commun/: define.h
src/endian/: endian.h
src/lz4/: lz4.c  xxhash.c
src/tests/: unitest.cpp
tests/: CMakeLists.txt
tests/lz4/: CMakeLists.txt  do_zcptest.cmake
tests/raw/: CMakeLists.txt
tests/usage/: CMakeLists.txt  do_zcptest_usage.cmake  zcp_usage_test.bat  zcp_usage_test.sh
